# podcast-player-pwa

./: .gitignore  Cargo.toml  Dockerfile  README.md  index.html
.cargo/: config.toml
.github/workflows/: main.yml
documentation/src/: components.uml
podcast-player-api/: .gitignore  Cargo.toml  LICENSE  README.md
podcast-player-api/ansible/tasks/: create_db.yml
podcast-player-api/pg-scripts/: create_db.sql
podcast-player-api/src/: fetcher.rs  lib.rs  repo.rs  types.rs
podcast-player-api/src/types/: service_config.rs  updater_config.rs
podcast-player-common/: Cargo.toml  README.md
podcast-player-common/src/: channel.rs  feed.rs  item.rs  lib.rs
podcast-player-common/src/channel/: channel_keys.rs  channel_meta.rs  channel_val.rs
podcast-player-common/src/feed/: feed_val.rs
podcast-player-common/src/item/: item_keys.rs  item_meta.rs  item_val.rs
podcast-player-pwa/: .gitignore  README.md
podcast-player-pwa/public/: manifest.json
podcast-player-pwa/src/: objects.rs  pages.rs
podcast-player-pwa/src/agents/: fetcher.rs
podcast-player-pwa/src/agents/player/task/: end.rs
podcast-player-pwa/src/agents/repo/: tasks.rs
podcast-player-pwa/src/agents/repo/tasks/: get_items_by_download_required.rs  update_item.rs
podcast-player-pwa/src/components/: feed_list.rs  item_list.rs
podcast-player-pwa/src/objects/: enclosure_meta.rs  fetcher_config.rs
src/: agents.rs  components.rs  lib.rs  main.rs  objects.rs
src/agents/: fetcher.rs  mod.rs  notifier.rs  player.rs  repo.rs  updater.rs
src/agents/player/: task.rs
src/agents/player/task/: end.rs  pause.rs  play.rs  set_current_time.rs  set_source.rs  status.rs
src/agents/repo/: mod.rs  task.rs  tasks.rs
src/agents/repo/task/: delete_enclosure.rs  download_started.rs  get_all.rs  get_keys.rs  open_db.rs  put_get_with_key.rs  store_enclosure.rs  sync_val.rs
src/agents/repo/tasks/: add_channel_vals.rs  add_enclosure.rs  add_feed_vals.rs  add_item_vals.rs  download_enclosure.rs  get_all.rs  get_channels.rs  get_enclosure.rs  get_fetcher_conf.rs  get_items_by_channel_id_year_month.rs  get_items_by_download_ok.rs  get_items_by_download_required.rs  mod.rs  put_get_with_key.rs  update_channel.rs  update_item.rs
src/components/: channel_list.rs  feed_list.rs  feed_new.rs  icon.rs  item_list.rs  item_list_compact.rs  mod.rs  nav_bar.rs  notification.rs  player.rs  range.rs  router.rs  top.rs
src/objects/: auth0_token.rs  channel.rs  feed.rs  fetcher_config.rs  item.rs  item_meta.rs  js_error.rs  mod.rs  updater_config.rs
src/pages/: channels_page.rs  feeds_page.rs  home_page.rs  info_page.rs  items_page.rs  mod.rs
