[package]
name = "podcast-player-pwa"
version = "1.1.0"
authors = ["Hannes Hochreiner <hannes@hochreiner.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-router = "0.16"
yew-agent = "0.1"
serde = "1"
serde_json = "1.0"
serde-wasm-bindgen = "0.4.1"
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = ["Window", "IdbFactory", "SourceBufferList", "IdbOpenDbOptions", "StorageManager", "StorageType", "IdbOpenDbRequest", "IdbDatabase", "IdbObjectStore", "IdbTransaction", "IdbTransactionMode", "IdbRequest", "AudioContext", "AudioBuffer", "AudioBufferSourceNode", "AudioDestinationNode", "AudioParam", "MediaSource", "SourceBuffer", "Url", "HtmlAudioElement", "MediaSourceReadyState", "IdbIndex", "IdbIndexParameters", "HtmlAudioElement", "HtmlMediaElement", "Navigator", "NetworkInformation", "ConnectionType"] }
wasm-logger = "0.2"
log = "0.4"
wasm-bindgen = "0.2"
chrono = { version = "0", features = ["serde", "wasmbind"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
yewtil = { version = "0.4", features = ["future"] }
sha2 = "0.10"
base64-url = "1.4"
url = "2.2"
podcast-player-common = { path ="../podcast-player-common" }

[package.metadata.release]
publish = false
